--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy>=1.24
-pandas>=2.0
-scikit-learn>=1.3
-matplotlib>=3.7
-scipy>=1.10
-kagglehub>=0.2.5   # pour utiliser KaggleHub
+kaggle==1.7.4.5
+kagglehub==0.3.13
+matplotlib==3.10.0
+numpy==2.0.2
+pandas==2.2.2
+scikit-learn==1.6.1
+scipy==1.16.3
