--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-kaggle==1.7.4.5
-kagglehub==0.3.13
-matplotlib==3.10.0
-numpy==2.0.2
-pandas==2.2.2
-scikit-learn==1.6.1
-scipy==1.16.3
+
+numpy>=1.24
+pandas>=2.0
+scikit-learn>=1.3
+scipy>=1.10
+matplotlib>=3.7
+seaborn>=0.12
+statsmodels>=0.14
+kagglehub>=0.2
+tqdm>=4.66
+jupyter>=1.0
+ipykernel>=6.25
+python-dotenv>=1.0
+# Dev (optionnel)
+black>=23.0
+flake8>=6.0
+isort>=5.12
